Fixed CSS for collapsed messages

--- a/wcfsetup/install/files/style/wbb.less
+++ b/wcfsetup/install/files/style/wbb.less
@@ -313,6 +313,12 @@
 			width: 0px;
 		}
 	}
+	
+	.messageCollapsed {
+		&.wbbPostDeleted {
+			.boxShadow(0, 0, @wcfErrorBackgroundColor, 10px);
+		}
+	}
 }
 
 .wbbPostLoading {
